# cloth_sim_rs

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  constants.rs  logic.rs  main.rs  rendering.rs
